<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/layout_bordertext">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:src="@drawable/music_magpie_logo"
        android:scaleType="fitCenter"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/lblBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/lblSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serialnum"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/btnMoreInfo"
            android:background="@drawable/layout_buttons"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_search"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawablePadding="10dp"
            android:text="@string/moreinfo"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>